# lorikeet-dash

./: .gitignore  Cargo.toml  README.md  build.rs
front/: .sassrc  package.json  run.js
front/src/: app.scss  app.tsx  chart.scss  chart.tsx  grid.scss  grid.tsx  index.tsx  style.scss
src/: chart.rs  main.rs
