[package]
name = "lorikeet-dash"
version = "0.1.0"
authors = ["cetra3 <cetra3@hotmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A Web Dashboard for Lorikeet"
repository = "https://github.com/cetra3/lorikeet-dash"
readme = "README.md"

[dependencies]
tokio = {version = "0.2", features = ["full"]}
lorikeet = "0.11.3"
pretty_env_logger = "0.4.0"
log = "0.4.8"
structopt = "0.3.14"
anyhow = "1.0.30"
chrono = { version = "0.4.11", features = ["serde"] }
tera = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.31.0"
lazy_static = "1.4.0"
serde_json = "=1.0.44"
includedir= "0.5.0"
phf = "0.7.24"
actix-web = "2"
actix-rt = "1"
conduit-mime-types = "0.7.3"


[build-dependencies]
includedir_codegen = "0.5.0"